--- a/screens/account.html
+++ b/screens/account.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>This is my account</title>
+    <link rel="stylesheet" href="/assets/CSS/account/account.css">
+    <link rel="stylesheet" href="/assets/main.css">
+    <link rel="stylesheet" href="/assets/reset.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
+    <title>Esta es mi cuenta</title>
 </head>
 <body>
-    
+    <main class="content">
+        <div class="profile__container">
+            <div class="profile__box">
+                <h1 class="profile__name">HOLA SEBASTIAN!</h1>
+                <h2 class="profile__wallet">Saldo:</h2>
+                <h3 class="profile__wallet--numbers">300MXN</h3>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
