Listo login, proyecto listo

--- a/screens/login.html
+++ b/screens/login.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/assets/main.css">
+    <link rel="stylesheet" href="/assets/reset.css">
+    <link rel="stylesheet" href="/assets/CSS/login/form-login.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
     <title>Iniciar Sesion</title>
 </head>
 <body>
@@ -11,10 +15,11 @@
         <div class="login__container">
             <form class="login__form">
                 <legend class="login__title">Iniciar Sesion</legend>
-                <h1 class="login__title--email">Correo Electronico</h1>
-                <input class="login__input--email" type="email" name="e-mail" id="e-mail">
-                <h1 class="login__title--password">Contraseña</h1>
-                <input class="login__input--password" type="password" name="password" id="password">
+                <h1 class="login__titles">Correo Electronico</h1>
+                <input class="login__inputs" type="email" name="e-mail" id="e-mail">
+                <h1 class="login__titles">Contraseña</h1>
+                <input class="login__inputs" type="password" name="password" id="password">
+                <input class="login__input--submit" type="submit" value="Iniciar Sesion">
             </form>
         </div>
     </main>
